fix card update and delete
